<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">AnyMemo</string>
    <string name="app_full_name">AnyMemo</string>
    <string name="website_versions_view">https://anymemo.org/versions-view</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="back_menu_text">Back</string>
    <string name="detail_menu_text">Detail</string>
    <string name="settings_menu_text">Settings</string>
...
    <string name="speak_hint_menu_text">Speak hint</string>
    <string name="undo_text">Undo</string>
    <string name="undo_fail_text">Unable to undo</string>
    <string name="undo_fail_message">You can only undo 1 card.</string>
    <string name="recent_databases">Recent databases</string>
    <string name="option_button_text">Options</string>
    <string name="about_button_text">About</string>
    <string name="help_button_text">Help</string>
    <string name="edit_button_text">Preview/edit</string>
    <string name="copyclipboard">Copy to clipboard</string>
    <string name="copyclipboard_summary">Automatically copy card content to clipboard.</string>
    <string name="memo_show_answer">Show answer</string>
    <string name="memo_show_hint">Hint</string>
    <string name="memo_no_item_title">No item</string>
    <string name="memo_no_item_message">There is no item to learn for now. If you want to cram, you can do quizzes by long clicking a db in the &quot;Recent&quot; tab.</string>
...
    <string name="settings_html_display">Display in HTML</string>
    <string name="settings_ratio">Q/A display ratio</string>
    <string name="settings_wipe">Wipe all learning progress</string>
    <string name="settings_shuffle">Shuffle all cards</string>
    <string name="add_screen_hint">Hint</string>
    <string name="settings_inverse">Swap the Q/A of all cards</string>
    <string name="settings_save">Save</string>
    <string name="warning_text">Warning</string>
    <string name="settings_wipe_warning">ALL learning progress will be reset!</string>
    <string name="settings_shuffle_warning">This operation will shuffle all cards and can NOT be undone.</string>
    <string name="settings_inverse_warning">This operation will swap the location of question and answer. Swap&amp;dup will add all swapped cards to the back of current database instead of replacing.</string>
    <string name="delete_warning">Do you really want to delete this card?</string>
    <string name="skip_text">Skip</string>
...
    <string name="add_screen_new">New</string>
    <string name="add_screen_answer">Answer</string>
    <string name="add_screen_option1">Option 1</string>
    <string name="add_screen_option2">Option 2</string>
    <string name="add_screen_option3">Option 3</string>
    <string name="add_screen_option4">Option 4</string>
    <string name="save_mc">Save</string>
    <string name="add_screen_next">Next</string>
    <string name="add_screen_previous">Previous</string>
    <string name="search_text">Search</string>
    <string name="fb_create_db">Create new DB</string>
    <string name="fb_create_dir">Create new folder</string>
    <string name="fb_create_db_message">Please choose deck type and name.</string>
...
    <string name="card_style">Card style</string>
    <string name="card_style_double">Double sided</string>
    <string name="card_style_single">Single sided</string>
    <string name="settings_field1">Customize card field1</string>
    <string name="settings_field2">Customize card field2</string>
    <string name="settings_field3">Customize card field3</string>
    <string name="hint_modeToggle">Hint Mode Toggle</string>
    <string name="left_text">Left</string>
    <string name="center_text">Center</string>
    <string name="right_text">Right</string>
    <string name="recent_tab_text">Recent</string>
    <string name="history_text">Quiz history</string>
    <string name="open_tab_text">Open</string>
...
    <string name="record_audio_permission_denied_message">AnyMemo could not get permission to record audio.</string>
    <string name="write_storage_permission_denied_message">AnyMemo could not get permission to write db file on external storage.</string>
    <string name="db_file_is_corrupted_text">DB file is corrupted</string>
    <string name="clear_text">Clear</string>
    <string name="change_directory_permission_denied_message">AnyMemo could not get permission to change to the directory.</string>
    <string name="directory_empty_text">(Empty directory)</string>
    <string name="more_text">MORE</string>
    <string name="shuffle_main">Shuffle</string>
    <string name="dropbox_item_description">Date: %1$s&lt;br&gt;Size: %2$d bytes</string>
    <string name="locale_esperanto_text">Esperanto</string>
    <string name="google_sign_in_not_successful_error_text">Google sign in is not successful</string>
    <string name="google_sign_in_empty_error_text">Google sign in result is empty</string>
    <string name="google_sign_in_account_empty_result">Unable to get Google account</string>
    <string name="title_activity_quiz_review">Quiz Review</string>
    <string name="title_activity_preview_edit_mc">PreviewEditMCActivity</string>
    <string name="title_activity_card_view_mc">CardViewMCActivity</string>
    <string name="title_activity_card_mc">Edit Card</string>
    <string name="title_activity_card_mc_list">Multiple Choice Cards</string>
    <string name="title_activity_mc_study_activity">Multiple Choice Study</string>
    <string name="title_activity_quiz_history_activity">Quiz History</string>
    <string-array name="optionsMC">

    </string-array>
...
