<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageButton
            android:id="@+id/favourite_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/about_button_text"
            app:srcCompat="@android:drawable/btn_star_big_off" />
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/field1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />
    <LinearLayout
        android:id="@+id/horizontal_line"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:orientation="vertical"
        android:background="#FF909090"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/field3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />
    <android.support.v4.view.ViewPager
        android:id="@+id/field2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</LinearLayout>

