...
            <TextView
                android:text="@string/add_screen_question"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"/>
            <EditText
                android:id="@+id/edit_dialog_question_mc_entry"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:gravity="top"
                android:layout_weight="1" />
...
